Some minor fixes

--- a/test.tex
+++ b/test.tex
@@ -49,6 +49,8 @@
 %% special clearpage for figures
 \usepackage{floatpag}
 
+\hyphenation{snö-driva}
+
 \title{Nissepedia - Ett urval}
 \author{Kulturföreningen Nissepedia}
 
@@ -131,7 +133,7 @@
 % to add the \markboth command to each dictionary entry
 \def\ditem[#1]{\item[#1]\markboth{#1}{#1}}
 \def\mydots{ \leavevmode\xleaders\hbox to 0.25em{\hfil. \hfil}\hfill\kern5pt}
-\setmainfont{Adobe Garamond Pro}
+
 
 \begin{document}
 
@@ -162,7 +164,7 @@
 \begin{center}
 \begin{minipage}{0.75\linewidth}
     \centering
-    
+
     \vspace{3cm}
 
     {\uppercase{\Huge Nissepedia\par}}
@@ -424,7 +426,7 @@ Abu Garcia! används ofta i Västerbotten\ref{vaesterbotten} som \textit{iAy car
 Idag kretsar produktionen kring kultur och institutionen Sagabiografen som varje sommar har filmfestival. På vintern kan man åka på drive-in bio medelst skoter.
 
 \ditem[Adde Malmberg]\label{adde malmberg}
- är Sveriges\ref{sverige} rolighetsminister. Tillsammans med \quotetext{Babben} Larsson kan han få vem som helst att skratta på sig.
+ är Sveriges\ref{sverige} rolighets\-minister. Tillsammans med \quotetext{Babben} Larsson kan han få vem som helst att skratta på sig.
 
 \ditem[Aforismer]\label{aforismer}
  Många äro de munläderförsedda som ägnat tid åt att författa aforismer - Oscar Wilde\ref{oscar wilde}, Nietzsche, Mark Twain och Platon är endast en handfull av dem. En aforism är en slagkraftig sentens som fångar upp och förmedlar en sanning om människan, varat eller något annat tidlöst och centralt.
@@ -432,14 +434,14 @@ Idag kretsar produktionen kring kultur och institutionen Sagabiografen som varje
 \uline{Exempel på aforismer}
 
 \begin{itemize}
-\item Av sina fiender lär sig den vise mycket. \textit{- Aristoteles}
-\item Nöden är geniets drivfjäder. \textit{- Honoré de Balzac}
-\item Moralister är människor som kliar sig själva där det kliar på andra. \textit{- Samuel Beckett}
-\item Mitt i den mörkaste vintern, lärde jag mig äntligen, att det inom mig, finns en oförgänglig sommar. \textit{- Albert Camus}
-\item Det är som min far brukade säga; \quotetext{Vi har kanske inte så mycket att leva av, men om pojken vill ha ett smörpapper så ska han fan i mig ha ett smörpapper!} \textit{- Mark Frygell}
-\item Den främsta dygden är att lägga band på sig och hålla tungan rätt i mun.\textit{ - Geoffrey Chaucer}
-\item De flesta människor lever i ruinerna av sina vanor. \textit{- Jean Cocteau}
-\item Hä ä bar å åk! \textit{- Ingemar Stenmark}
+\item Av sina fiender lär sig den vise mycket. \textit{Aristoteles}
+\item Nöden är geniets drivfjäder. \textit{Honoré de Balzac}
+\item Moralister är människor som kliar sig själva där det kliar på andra. \textit{Samuel Beckett}
+\item Mitt i den mörkaste vintern, lärde jag mig äntligen, att det inom mig, finns en oförgänglig sommar. \textit{Albert Camus}
+\item Det är som min far brukade säga; \quotetext{Vi har kanske inte så mycket att leva av, men om pojken vill ha ett smörpapper så ska han fan i mig ha ett smörpapper!} \textit{Mark Frygell}
+\item Den främsta dygden är att lägga band på sig och hålla tungan rätt i mun.\textit{Geoffrey Chaucer}
+\item De flesta människor lever i ruinerna av sina vanor. \textit{Jean Cocteau}
+\item Hä ä bar å åk! \textit{Ingemar Stenmark}
 \end{itemize}
 
 \ditem[Akademiker]\label{akademiker}
@@ -455,7 +457,7 @@ Idag kretsar produktionen kring kultur och institutionen Sagabiografen som varje
  är ett namn som nyblivna föräldrar ger till sitt barn med förhoppningen att det ska göra att barnet automatiskt blir lillgammalt\ref{lillgammal}. Albin betyder inte just något särskilt.
 
 \ditem[Aleksandr Karelin]\label{aleksandr karelin}
- Aleksandr Aleksandrovitj Karelin, även kallad \quotetext{det ryska experimentet} och \quotetext{lyftkranen från Sibirien}, född 19 september 1967 i Novosibirsk, Sovjet, är ingen kille man bråkar med. Till yrket brottare.
+ Aleksandr Aleksandrovitj Karelin, även kallad \quotetext{det ryska experimentet} och \quotetext{lyftkranen från Sibirien}, född 19 sep\-tember 1967 i Novosibirsk, Sovjet, är ingen kille man bråkar med. Till yrket brottare.
 
 \uline{Föda och beteenden}
 
@@ -8444,9 +8446,13 @@ Oddsen att just denna fasta nyckel\ref{fasta nycklar} är nednött till obrukba
 
 \setlength\parindent{0pt}
 \clearpage
+
+{\Large{\textbf{Kategorier}}}
+\vspace{3cm}
+
 \markboth{}{}
 ~\newline
-{\textbf{\large Ac/dc}}
+{\textbf{\large AC/DC}}
 \begin{multicols}{2}
 AC/DC-gitarr \mydots \indexref{acdc-gitarr}\newline
 Australien \mydots \indexref{australien}\newline
@@ -10660,17 +10666,13 @@ Vilskita \mydots \indexref{vilskita}\newline
 Vinfylla \mydots \indexref{vinfylla}\newline
 \end{multicols}
 \clearpage
-\begin{multicols}{2}
-\end{multicols}
-{\huge{\textbf{1}}}
-\begin{multicols}{2}
-13 \mydots \indexref{13}\newline
-\end{multicols}
-{\huge{\textbf{5}}}
-\begin{multicols}{2}
-50 million piece of shit \mydots \indexref{50 million piece of shit}\newline
-\end{multicols}
-{\huge{\textbf{A}}}
+
+
+{\Large{\textbf{Index}}}
+\vspace{3cm}
+
+
+{\large{\textbf{A}}}
 \begin{multicols}{2}
 A-traktor \mydots \indexref{a-traktor}\newline
 Abdera \mydots \indexref{abdera}\newline
@@ -10735,7 +10737,7 @@ Axess tv \mydots \indexref{axess tv}\newline
 Axtorpet \mydots \indexref{axtorpet}\newline
 Ayn Rand \mydots \indexref{ayn rand}\newline
 \end{multicols}
-{\huge{\textbf{B}}}
+{\large{\textbf{B}}}
 \begin{multicols}{2}
 Backa med släp \mydots \indexref{backa med slaep}\newline
 Backa om \mydots \indexref{backa om}\newline
@@ -10835,7 +10837,7 @@ Busskruven \mydots \indexref{busskruven}\newline
 Bärsfylla \mydots \indexref{baersfylla}\newline
 Bönder \mydots \indexref{boonder}\newline
 \end{multicols}
-{\huge{\textbf{C}}}
+{\large{\textbf{C}}}
 \begin{multicols}{2}
 Cacao creme \mydots \indexref{cacao creme}\newline
 Calskrove \mydots \indexref{calskrove}\newline
@@ -10870,7 +10872,7 @@ Crustpippi \mydots \indexref{crustpippi}\newline
 Currykondom \mydots \indexref{currykondom}\newline
 Cykelhjälm \mydots \indexref{cykelhjaelm}\newline
 \end{multicols}
-{\huge{\textbf{D}}}
+{\large{\textbf{D}}}
 \begin{multicols}{2}
 Dackefejden \mydots \indexref{dackefejden}\newline
 Dagens Nyheter \mydots \indexref{dagens nyheter}\newline
@@ -10948,7 +10950,7 @@ Däcka \mydots \indexref{daecka}\newline
 Dävert \mydots \indexref{daevert}\newline
 Dävertspotting \mydots \indexref{daevertspotting}\newline
 \end{multicols}
-{\huge{\textbf{E}}}
+{\large{\textbf{E}}}
 \begin{multicols}{2}
 E=mc2 \mydots \indexref{e=mc2}\newline
 Ebbe \mydots \indexref{ebbe}\newline
@@ -10960,11 +10962,11 @@ En bärs, en bärs, min järndanksamling för en bärs \mydots \indexref{en baer
 Ekfors Kraft \mydots \indexref{ekfors kraft}\newline
 Elva \mydots \indexref{elva}\newline
 \end{multicols}
-{\huge{\textbf{É}}}
+{\large{\textbf{É}}}
 \begin{multicols}{2}
 Émile Durkheim \mydots \indexref{émile durkheim}\newline
 \end{multicols}
-{\huge{\textbf{E}}}
+{\large{\textbf{E}}}
 \begin{multicols}{2}
 England \mydots \indexref{england}\newline
 Enkelbeckasin \mydots \indexref{enkelbeckasin}\newline
@@ -10984,7 +10986,7 @@ Eva Ekeblad \mydots \indexref{eva ekeblad}\newline
 Evert Taube \mydots \indexref{evert taube}\newline
 Evert Taubes värld \mydots \indexref{evert taubes vaerld}\newline
 \end{multicols}
-{\huge{\textbf{F}}}
+{\large{\textbf{F}}}
 \begin{multicols}{2}
 Facebook \mydots \indexref{facebook}\newline
 Fagersta \mydots \indexref{fagersta}\newline
@@ -11087,7 +11089,7 @@ Förståsigpåare \mydots \indexref{foorstaasigpaaare}\newline
 Försåvitt \mydots \indexref{foorsaavitt}\newline
 Förvirring \mydots \indexref{foorvirring}\newline
 \end{multicols}
-{\huge{\textbf{G}}}
+{\large{\textbf{G}}}
 \begin{multicols}{2}
 Galna ko-sjukan \mydots \indexref{galna ko-sjukan}\newline
 Gamle Ole \mydots \indexref{gamle ole}\newline
@@ -11151,7 +11153,7 @@ Gösta \mydots \indexref{goosta}\newline
 Gösta Snoddas Nordgren \mydots \indexref{goosta snoddas nordgren}\newline
 Göteborg \mydots \indexref{gooteborg}\newline
 \end{multicols}
-{\huge{\textbf{H}}}
+{\large{\textbf{H}}}
 \begin{multicols}{2}
 Ha bärs \mydots \indexref{ha baers}\newline
 Habbadixen! \mydots \indexref{habbadixen!}\newline
@@ -11224,7 +11226,7 @@ Hårdrockism \mydots \indexref{haardrockism}\newline
 Högtalartips \mydots \indexref{hoogtalartips}\newline
 Hönsgård \mydots \indexref{hoonsgaard}\newline
 \end{multicols}
-{\huge{\textbf{I}}}
+{\large{\textbf{I}}}
 \begin{multicols}{2}
 I'm so tired I could sleep on a clothesline \mydots \indexref{im so tired i could sleep on a clothesline}\newline
 Ica prästost \mydots \indexref{ica praestost}\newline
@@ -11254,7 +11256,7 @@ Italienska svordomar \mydots \indexref{italienska svordomar}\newline
 Ivar Lo Johansson \mydots \indexref{ivar lo johansson}\newline
 Ivriga små bävrar \mydots \indexref{ivriga smaa baevrar}\newline
 \end{multicols}
-{\huge{\textbf{J}}}
+{\large{\textbf{J}}}
 \begin{multicols}{2}
 J.R.R Tolkien \mydots \indexref{j.r.r tolkien}\newline
 Jackie Howe \mydots \indexref{jackie howe}\newline
@@ -11289,7 +11291,7 @@ Jättemyrslok \mydots \indexref{jaettemyrslok}\newline
 Jättemyrslokssele \mydots \indexref{jaettemyrslokssele}\newline
 Jävelskap \mydots \indexref{jaevelskap}\newline
 \end{multicols}
-{\huge{\textbf{K}}}
+{\large{\textbf{K}}}
 \begin{multicols}{2}
 Kaffekask \mydots \indexref{kaffekask}\newline
 Kaknästornet \mydots \indexref{kaknaestornet}\newline
@@ -11380,7 +11382,7 @@ Köping \mydots \indexref{kooping}\newline
 Körp \mydots \indexref{koorp}\newline
 Közösülés \mydots \indexref{koozoosülés}\newline
 \end{multicols}
-{\huge{\textbf{L}}}
+{\large{\textbf{L}}}
 \begin{multicols}{2}
 Laissez-faire \mydots \indexref{laissez-faire}\newline
 Landslagsuppehåll \mydots \indexref{landslagsuppehaall}\newline
@@ -11432,7 +11434,7 @@ Långfredagen \mydots \indexref{laangfredagen}\newline
 Löneförmån \mydots \indexref{loonefoormaan}\newline
 Lördag \mydots \indexref{loordag}\newline
 \end{multicols}
-{\huge{\textbf{M}}}
+{\large{\textbf{M}}}
 \begin{multicols}{2}
 Mackshopping \mydots \indexref{mackshopping}\newline
 Mads Mikkelsen \mydots \indexref{mads mikkelsen}\newline
@@ -11501,7 +11503,7 @@ Måndag \mydots \indexref{maandag}\newline
 Mångsysslarpensionär \mydots \indexref{maangsysslarpensionaer}\newline
 Mördare \mydots \indexref{moordare}\newline
 \end{multicols}
-{\huge{\textbf{N}}}
+{\large{\textbf{N}}}
 \begin{multicols}{2}
 Naturens dialektik \mydots \indexref{naturens dialektik}\newline
 Naturhistoriska museet \mydots \indexref{naturhistoriska museet}\newline
@@ -11534,7 +11536,7 @@ Näs-flås \mydots \indexref{naes-flaas}\newline
 Näsa \mydots \indexref{naesa}\newline
 Näverslips \mydots \indexref{naeverslips}\newline
 \end{multicols}
-{\huge{\textbf{O}}}
+{\large{\textbf{O}}}
 \begin{multicols}{2}
 Oberoende olympiska deltagare \mydots \indexref{oberoende olympiska deltagare}\newline
 Odon \mydots \indexref{odon}\newline
@@ -11555,7 +11557,7 @@ Oscar Wilde \mydots \indexref{oscar wilde}\newline
 Ostmacka \mydots \indexref{ostmacka}\newline
 Ououou \mydots \indexref{ououou}\newline
 \end{multicols}
-{\huge{\textbf{P}}}
+{\large{\textbf{P}}}
 \begin{multicols}{2}
 Paddan i pannrummet \mydots \indexref{paddan i pannrummet}\newline
 Paj \mydots \indexref{paj}\newline
@@ -11643,11 +11645,11 @@ Päronhalva \mydots \indexref{paeronhalva}\newline
 Pölsa \mydots \indexref{poolsa}\newline
 Pörr \mydots \indexref{poorr}\newline
 \end{multicols}
-{\huge{\textbf{Q}}}
+{\large{\textbf{Q}}}
 \begin{multicols}{2}
 Queequeg \mydots \indexref{queequeg}\newline
 \end{multicols}
-{\huge{\textbf{R}}}
+{\large{\textbf{R}}}
 \begin{multicols}{2}
 RAC \mydots \indexref{rac}\newline
 Radioreklam \mydots \indexref{radioreklam}\newline
@@ -11689,7 +11691,7 @@ Rött \mydots \indexref{roott}\newline
 Rövgitarr \mydots \indexref{roovgitarr}\newline
 Rød pølse \mydots \indexref{roood pooolse}\newline
 \end{multicols}
-{\huge{\textbf{S}}}
+{\large{\textbf{S}}}
 \begin{multicols}{2}
 Saltbas \mydots \indexref{saltbas}\newline
 Saltsjöbadsavtalet \mydots \indexref{saltsjoobadsavtalet}\newline
@@ -11870,7 +11872,7 @@ Sågverk \mydots \indexref{saagverk}\newline
 Sårrengöringsvätska \mydots \indexref{saarrengooringsvaetska}\newline
 Söndag \mydots \indexref{soondag}\newline
 \end{multicols}
-{\huge{\textbf{T}}}
+{\large{\textbf{T}}}
 \begin{multicols}{2}
 T-rexarmar \mydots \indexref{t-rexarmar}\newline
 Ta för sig \mydots \indexref{ta foor sig}\newline
@@ -11945,7 +11947,7 @@ Tyskland \mydots \indexref{tyskland}\newline
 Tåga \mydots \indexref{taaga}\newline
 Törley gala \mydots \indexref{toorley gala}\newline
 \end{multicols}
-{\huge{\textbf{U}}}
+{\large{\textbf{U}}}
 \begin{multicols}{2}
 Ugglekonst \mydots \indexref{ugglekonst}\newline
 Umeå \mydots \indexref{umeaa}\newline
@@ -11967,7 +11969,7 @@ Uvmytologi \mydots \indexref{uvmytologi}\newline
 Uvsvane \mydots \indexref{uvsvane}\newline
 Uvtårar \mydots \indexref{uvtaarar}\newline
 \end{multicols}
-{\huge{\textbf{V}}}
+{\large{\textbf{V}}}
 \begin{multicols}{2}
 Valentina Vladimirovna Teresjkova \mydots \indexref{valentina vladimirovna teresjkova}\newline
 Valfrihet \mydots \indexref{valfrihet}\newline
@@ -12009,7 +12011,7 @@ Västerbotten \mydots \indexref{vaesterbotten}\newline
 Växjö \mydots \indexref{vaexjoo}\newline
 Våld \mydots \indexref{vaald}\newline
 \end{multicols}
-{\huge{\textbf{W}}}
+{\large{\textbf{W}}}
 \begin{multicols}{2}
 Warcollapse \mydots \indexref{warcollapse}\newline
 Watain \mydots \indexref{watain}\newline
@@ -12021,20 +12023,20 @@ William Banting \mydots \indexref{william banting}\newline
 World Wide Web \mydots \indexref{world wide web}\newline
 Wunderbaum \mydots \indexref{wunderbaum}\newline
 \end{multicols}
-{\huge{\textbf{X}}}
+{\large{\textbf{X}}}
 \begin{multicols}{2}
 X3m sports \mydots \indexref{x3m sports}\newline
 \end{multicols}
-{\huge{\textbf{Y}}}
+{\large{\textbf{Y}}}
 \begin{multicols}{2}
 Yngwiefiering \mydots \indexref{yngwiefiering}\newline
 \end{multicols}
-{\huge{\textbf{Z}}}
+{\large{\textbf{Z}}}
 \begin{multicols}{2}
 ZiL-fil \mydots \indexref{zil-fil}\newline
 Zoom \mydots \indexref{zoom}\newline
 \end{multicols}
-{\huge{\textbf{A}}}
+{\large{\textbf{Å}}}
 \begin{multicols}{2}
 Åka på safari \mydots \indexref{aaka paa safari}\newline
 Åka vikingaskepp \mydots \indexref{aaka vikingaskepp}\newline
@@ -12048,6 +12050,9 @@ Zoom \mydots \indexref{zoom}\newline
 Ånäset \mydots \indexref{aanaeset}\newline
 Årets göteborgare \mydots \indexref{aarets gooteborgare}\newline
 Åtta \mydots \indexref{aatta}\newline
+\end{multicols}
+{\large{\textbf{Ä}}}
+\begin{multicols}{2}
 Äckligt godis \mydots \indexref{aeckligt godis}\newline
 Ädelost \mydots \indexref{aedelost}\newline
 Äganderätt \mydots \indexref{aeganderaett}\newline
@@ -12057,12 +12062,20 @@ Zoom \mydots \indexref{zoom}\newline
 Ättestupa \mydots \indexref{aettestupa}\newline
 Äventyrsbad \mydots \indexref{aeventyrsbad}\newline
 \end{multicols}
-{\huge{\textbf{O}}}
+{\large{\textbf{Ö}}}
 \begin{multicols}{2}
 Ödla på pinne \mydots \indexref{oodla paa pinne}\newline
 Öra \mydots \indexref{oora}\newline
 Örnäset \mydots \indexref{oornaeset}\newline
 Övre magmunnen \mydots \indexref{oovre magmunnen}\newline
+\end{multicols}
+
+\begin{multicols}{2}
+\end{multicols}
+{\large{\textbf{Symboler}}}
+\begin{multicols}{2}
+13 \mydots \indexref{13}\newline
+50 million piece of shit \mydots \indexref{50 million piece of shit}\newline
 \end{multicols}
 
 
